manifests/ingress/web1-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: nginx-container
        image: nginx
        volumeMounts:
        - name: web1-content-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web1-content-volume
        configMap:
          name: web1-content
---
apiVersion: v1
kind: Service
metadata:
  name: service-web1-clusterip
spec:
  type: ClusterIP
  selector:
    app: web1
  ports:
  - port: 3000
    targetPort: 80
