manifests/ingress/web2-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: nginx-container
        image: nginx
        volumeMounts:
        - name: web2-content-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web2-content-volume
        configMap:
          name: web2-content

---
apiVersion: v1
kind: Service
metadata:
  name: service-web2-clusterip
spec:
  type: ClusterIP
  selector:
    app: web2
  ports:
  - port: 4000
    targetPort: 80
